--- a/Facebook/Base.lproj/Main.storyboard
+++ b/Facebook/Base.lproj/Main.storyboard
@@ -136,21 +136,30 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Pgg-mB-SAg">
-                                        <rect key="frame" x="261" y="15" width="51" height="27"/>
+                                        <rect key="frame" x="261" y="17" width="51" height="27"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="doneButton">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onDoneButtonPress:" destination="hht-js-eEM" eventType="touchUpInside" id="uIg-f3-RcQ"/>
+                                        </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding1" id="atq-aA-nFG">
-                                        <rect key="frame" x="0.0" y="44" width="320" height="480"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding1" id="atq-aA-nFG">
+                                        <rect key="frame" x="0.0" y="47" width="320" height="480"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     </view>
+                    <connections>
+                        <outlet property="doneButton" destination="Pgg-mB-SAg" id="WYB-On-naH"/>
+                        <outlet property="imageView" destination="atq-aA-nFG" id="NJK-ie-U9Q"/>
+                        <outlet property="photoActionsImageView" destination="W2X-pA-RE0" id="URU-1K-pkf"/>
+                        <outlet property="scrollView" destination="dlJ-Vm-d4a" id="RgW-ZG-WME"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ee-zy-bam" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -159,7 +168,7 @@
         <!--News Feed View Controller-->
         <scene sceneID="ac3-av-Vri">
             <objects>
-                <viewController id="hBK-bb-7vk" customClass="NewsFeedViewController" customModule="Facebook" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="hBK-bb-7vk" customClass="NewsFeedViewController" customModule="Facebook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="miJ-o9-OHC">
                         <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -172,7 +181,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="YZ6-vp-O3X">
+                            <scrollView autoresizesSubviews="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" id="YZ6-vp-O3X">
                                 <rect key="frame" x="0.0" y="110" width="320" height="458"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -181,7 +190,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6Vc-xY-a2r">
-                                        <rect key="frame" x="12" y="180" width="298" height="248"/>
+                                        <rect key="frame" x="12" y="768" width="298" height="248"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -206,7 +215,7 @@
                                             <outletCollection property="gestureRecognizers" destination="mOY-Mj-rKo" appends="YES" id="tea-iP-DA1"/>
                                         </connections>
                                     </imageView>
-                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding3" id="Kok-nc-3AE">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding3" id="Kok-nc-3AE">
                                         <rect key="frame" x="162" y="83" width="155" height="102"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
@@ -214,7 +223,7 @@
                                             <outletCollection property="gestureRecognizers" destination="7kG-rm-mNK" appends="YES" id="PgX-7L-25w"/>
                                         </connections>
                                     </imageView>
-                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding4" id="sOG-El-jaV">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding4" id="sOG-El-jaV">
                                         <rect key="frame" x="162" y="188" width="155" height="102"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
@@ -222,7 +231,7 @@
                                             <outletCollection property="gestureRecognizers" destination="pO5-aR-VoY" appends="YES" id="9TM-Sb-jmb"/>
                                         </connections>
                                     </imageView>
-                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding5" id="oW8-79-dFE">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding5" id="oW8-79-dFE">
                                         <rect key="frame" x="162" y="294" width="155" height="102"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
@@ -270,6 +279,11 @@
                     <connections>
                         <outlet property="feedImageView" destination="BFk-jQ-UCW" id="FKQ-21-8kr"/>
                         <outlet property="scrollView" destination="YZ6-vp-O3X" id="Pgj-Be-1bK"/>
+                        <outlet property="wedding1ImageView" destination="6Hd-VY-RRh" id="Iwg-dW-rQe"/>
+                        <outlet property="wedding2ImageView" destination="yz7-eE-mHF" id="3PZ-xh-DEP"/>
+                        <outlet property="wedding3ImageView" destination="Kok-nc-3AE" id="JVe-pM-B38"/>
+                        <outlet property="wedding4ImageView" destination="sOG-El-jaV" id="uDf-kn-Jbf"/>
+                        <outlet property="wedding5ImageView" destination="oW8-79-dFE" id="xlW-CI-jUJ"/>
                         <segue destination="hht-js-eEM" kind="modal" identifier="feedToPhotoViewer" id="iEt-UK-l76"/>
                     </connections>
                 </viewController>
@@ -279,10 +293,26 @@
                         <action selector="onTap:" destination="hBK-bb-7vk" id="ybh-HY-gO8"/>
                     </connections>
                 </tapGestureRecognizer>
-                <tapGestureRecognizer id="mOY-Mj-rKo" userLabel="tap2"/>
-                <tapGestureRecognizer id="7kG-rm-mNK" userLabel="tap3"/>
-                <tapGestureRecognizer id="pO5-aR-VoY" userLabel="tap4"/>
-                <tapGestureRecognizer id="DPH-6V-hiH" userLabel="tap5"/>
+                <tapGestureRecognizer id="mOY-Mj-rKo" userLabel="tap2">
+                    <connections>
+                        <action selector="onTap:" destination="hBK-bb-7vk" id="Wrk-82-2qn"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="7kG-rm-mNK" userLabel="tap3">
+                    <connections>
+                        <action selector="onTap:" destination="hBK-bb-7vk" id="SMo-5g-fHR"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="pO5-aR-VoY" userLabel="tap4">
+                    <connections>
+                        <action selector="onTap:" destination="hBK-bb-7vk" id="Lbb-LQ-FdP"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="DPH-6V-hiH" userLabel="tap5">
+                    <connections>
+                        <action selector="onTap:" destination="hBK-bb-7vk" id="WtH-KP-stK"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-942" y="1436"/>
         </scene>
